2004-12-26 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/avr.src/arith_inst.cc: fixed bug #1088372- savr is not
	  built by gcc 3.4.2

2004-12-25 Paul Stoffregen <paul AT pjrc.com>

	* device/lib/printf_tiny.c: printf for mcs51 in only 267 bytes,
	  and fully reentrant and register bank neutral.
	* device/lib/printf_fast.c: added float (not enabled by default),
	  added compact/slower integer (also not enabled by default), 
	  improved size/speed of fast integer code, other minor changes
	* device/include/stdio.h, device/lib/Makefile.in,
	  device/lib/libsdcc.lib: integrate printf_tiny into mcs51 build

2004-12-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/pic16/pcode.c: declaring variables other than at the start of a
	  block is not supported in C by VC6.

2004-12-22 Vangelis Rokas <vrokas AT otenet.gr>

	* applied a previous patch from Raphael Neider that wasn't included
	in the previous commits, which fixes infinite loops within jumptable
	improvements,
	* made some fixes that previous patches introduced

2004-12-21 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/gen.c (pic16_aopGet): applied fix from Raphael Neider
	that fixes an issue with AOP_PCODE asmop's offset,
	* (pic16_popCopyReg): update instance field too,
	* (mov2w): modified to pic16_mov2w because it conflicts with mov2w
	function of pic port,
	* (genCmp, genAnd, genAssign),
	* src/pic16/genarith.c (genAddLit): some fixes from Raphael Neider,

2004-12-20 Vangelis Rokas <vrokas AT otenet.gr>

	* src/SDCCast.c (gatherAutoInit): allow pic16 to emit static
	variables initial values to idata section,
	* src/SDCCicode.c (geniCodeCall): patch from ### to fix unreferenced
	variables in some functions. This utilizes parmBytes field of iCode
	structure to hold the offset of the variable in stack. (might be
	able to use the stack field too?)
	* applied patch from Raphael Neider # ### , # ###
	* src/pic16/glue.c (pic16emitRegularMap): fix to print static